chore: amend use of i18next string interpolation
apply appropriate structure to translate text with interpolated variables

fixes #34

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -1,3 +1,6 @@
 {
-  "translations": {}
+  "translations": {
+    "space-warning-alert": "This space has more than {{maxTreeLength}} subspaces. The data below is sampled from only the first {{maxTreeLength}} retrieved subspaces.",
+    "actions-info-alert": "Displaying {{numActionsRetrieved}} actions from a requested sample of {{requestedSampleSize}} actions."
+  }
 }
