--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -9,6 +9,15 @@
     "Request the full dataset for this view of this space": "Request the full dataset for the '{{view}}' view of this space",
     "The 'builder' view displays analytics from the default Graasp item creation interface.": "The 'builder' view displays analytics from the default Graasp item creation interface.",
     "The 'player' view displays analytics from the standalone Graasp interface typically used by students to access an item.": "The 'player' view displays analytics from the standalone Graasp interface typically used by students to access an item.",
-    "The 'explorer' view displays analytics from the standalone Graasp interface typically used by visualize resources.": "The 'explore' view displays analytics from the standalone Graasp interface typically used by visualize resources."
+    "The 'explorer' view displays analytics from the standalone Graasp interface typically used by visualize resources.": "The 'explore' view displays analytics from the standalone Graasp interface typically used by visualize resources.",
+    "Analytics": "Analytics",
+    "Select View": "Select View:",
+    "Select All": "Select All",
+    "Filter by User": "Filter by User:",
+    "No actions to show for these users": "No actions to show for these users",
+    "Actions by Time of Day": "Actions by Time of Day",
+    "Actions by Verb": "Actions by Verb",
+    "Actions by Location": "Actions by Location",
+    "Actions by Day": "Actions by Day"
   }
 }
