fix: platform switch color, favicon and shared layout (#196)
fix(docs): update screenshot and readme
fix: shared layout
fix(build): add missing favicon file

Co-authored-by: Kim Lan Phan Hoang <pyphilia@gmail.com>

--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -23,6 +23,7 @@
   "MOST_INTERACTED_ITEMS_BY_ACTION": "Les {{nb}} éléments les plus utilisés par action",
   "MOST_INTERACTED_ITEMS_BY_USER": "Les {{nb}} éléments les plus utilisés par utilisateur",
   "NO_ACTIONS_TO_SHOW_FOR_THIS_USER": "Aucune action à afficher pour ces utilisateurs",
+  "NO_ITEM_SELECTED": "Sélectionnez un élément à afficher via la navigation pour voir ses données analytiques.",
   "NO_USER_SELECTED": "Aucun utilisateur sélectionné",
   "OTHER_ACTION_TYPE": "Autre",
   "Request the full dataset for this item": "Faire une demande pour télécharger toutes les données pour la vue '{{view}}' de cet élément",
@@ -41,7 +42,6 @@
   "VIEW_PLAYER_TOOLTIP": "Le contexte 'player' affiche les analytics de l'interface indépendente de Graasp typiquement utilisée par les étudiants pour accéder à un élément.",
   "VIEW_UNKNOWN_TOOLTIP": "Le contexte 'inconnu' regroupe toutes les autres actions qui peuvent arriver en dehors de Graasp.",
   "VIEWS_SELECT": "Contexte",
-  "HOME_MESSAGE": "Sélectionnez un élément à afficher via la navigation pour voir ses analytics.",
   "EXPORT_ERROR_MESSAGE": "Une erreur inattendue est survenue",
 
   "Sunday": "Dimanche",
