--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -58,6 +58,24 @@
   "APPS_ANALYTICS_TITLE": "Applications",
   "USER_SWITCH_SIGN_IN_TEXT": "Sign In",
   "DRAWER_OPEN_ARIA": "Open Sidebar",
+  "ACTIONS_LEGEND_MODAL_TITLE": "Actions legend",
+  "ITEM_VIEW_ACTION_DESCRIPTION": "Number of times users view the item.",
+  "COPY_ACTION_DESCRIPTION": "Number of times an item is copied, indicating the value or utility of the content to users",
+  "UPDATE_ACTION_DESCRIPTION": "Total updates over the item, offering insights into the continuous improvement of the content.",
+  "ITEM_DOWNLOAD_ACTION_DESCRIPTION": "Number of downloads, reflecting the demand or popularity of specific resources or content.",
+  "CREATE_ACTION_DESCRIPTION": "Creation event",
+  "MOVE_ACTION_DESCRIPTION": "Times item moved",
+  "CHAT_CLEAR_ACTION_DESCRIPTION": "Number of times item chat cleared",
+  "LINK_OPEN_ACTION_DESCRIPTION": "Number of time item link opened",
+  "ITEM_SEARCH_ACTION_DESCRIPTION": "Times users search on your item",
+  "ITEM_UNLIKE_ACTION_DESCRIPTION": "Times users remove like on your item",
+  "ITEM_LIKE_ACTION_DESCRIPTION": "Number of times users like your item",
+  "ITEM_EMBED_ACTION_DESCRIPTION": "Number of time your item embedded",
+  "DELETE_ACTION_DESCRIPTION": "Times your item deleted",
+  "COLLECTION_VIEW_ACTION_DESCRIPTION": "Number of time your library collection viewed",
+  "CHAT_UPDATE_ACTION_DESCRIPTION": "Number of times item chat updated",
+  "CHAT_DELETE_ACTION_DESCRIPTION": "Number of times item chat deleted",
+  "CHAT_CREATE_ACTION_DESCRIPTION": "Number of times item chat created",
   "ERROR_FETCHING_DATA": "An error occurred while fetching data, Please try again later",
   "ITEM_SEARCH_PLACEHOLDER": "Search by item name",
   "RECENT_ITEMS_TITLE": "Recent Items",
