feat: separate export item in a route (#346)
* feat: seperate export item in a route

* feat: add glimpse about exported data

* fix: add what to export explaination

* fix: change title of export

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -33,6 +33,7 @@
   "TAB_ITEMS": "Items",
   "TAB_USERS": "Users",
   "TAB_APPS": "Apps",
+  "TAB_EXPORT": "Export actions",
   "TOTAL_ACTIONS_DISTRIBUTIONS": "Total Actions Distributions",
   "TOTAL_ACTIONS": "Total actions",
   "USERS_ANALYTICS_TITLE": "Users",
@@ -82,5 +83,21 @@
   "NO_ITEMS_EXIT": "No items found.",
   "NO_ITEMS_MATCH_SEARCH": "No search results found.",
   "HOME_SHOW_MORE": "Show more...",
-  "ACTIONS_MIGHT_HAS_NO_GEOLOCATION": "Some actions might have no geolocation records"
+  "ACTIONS_MIGHT_HAS_NO_GEOLOCATION": "Some actions might have no geolocation records",
+  "EXPORT_ANALYTICS_TITLE": "Export Analytics",
+  "EXPORT_ANALYTICS_DESCRIPTION": "You can export the analytical traces left by users while interacting with your item (and its children). It may take some time to gather the data into an archive, after which you'll receive a link via email for download. This link remains valid for 7 days.\n \n You are allowed one data request per day. Any additional requests will yield the same archive. For instance, if an archive is generated at 8 AM and you request another export at 10 AM, you'll receive the same archive as the one generated at 8 AM, without including the data between 8 AM and 10 AM.",
+  "EXPORT_ITEM_DATASET": "Export item dataset",
+  "EXPORT_LIST_ITEM_ITEM_TITLE": "Your Current Item",
+  "EXPORT_LIST_ITEM_ITEM_DESCRIPTION": "This includes all the details of the item.",
+  "EXPORT_LIST_ITEM_DESCENDANTS_TITLE": "Descendants (if available)",
+  "EXPORT_LIST_ITEM_DESCENDANTS_DESCRIPTION": "If the item has any 'children' or related items that stem from it, these will be included too.",
+  "EXPORT_LIST_ITEM_APPS_TITLE": "Associated Apps",
+  "EXPORT_LIST_ITEM_APPS_DESCRIPTION": "Any descendants applications the item contain.",
+  "EXPORT_LIST_ITEM_MEMBERS_TITLE": "Members and Their Roles",
+  "EXPORT_LIST_ITEM_MEMBERS_DESCRIPTION": "Information about who has access to this item, along with their roles or memberships.",
+  "EXPORT_LIST_ITEM_CHATS_TITLE": "Chat History (where applicable)",
+  "EXPORT_LIST_ITEM_CHATS_DESCRIPTION": "Conversations or discussions related to this item will be captured in the export.",
+  "EXPORT_LIST_ITEM_ACTIONS_TITLE": "Tracked Actions",
+  "EXPORT_LIST_ITEM_ACTIONS_DESCRIPTION": "Actions or activities that have been recorded for this item within different view including Library, Player, Account, and Analytics.",
+  "WHAT_TO_EXPORT_TITLE": "What actions does the archive include?"
 }
