feat: create general statistic page (#378)
* feat: initalize general statistic and create date range component

* feat: create member activity chart

* feat: change sidebar to have my statistics only at root pages and change general statistics to my statistics

* feat: rename file to myAnalyticspage

* fix: responsive design and filling ranges gaps

* feat: controlling number of bars depends on screen size

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -29,6 +29,7 @@
   "OTHER_ACTION_TYPE": "Other",
   "SAMPLE_ACTIONS_CHARTS_MESSAGE": "Displaying '{{view}} view' actions from a maximum requested sample size of {{requestedSampleSize}} actions.",
   "SAMPLE_ACTIONS_MESSAGE": "By default, a sample of maximum {{requestedSampleSize}} actions is requested and displayed in the charts below, in order to provide a general overview of activity in this item.",
+  "TAB_MY_ANALYTICS": "My analytics",
   "TAB_GENERAL": "General",
   "TAB_ITEMS": "Items",
   "TAB_USERS": "Users",
@@ -77,6 +78,7 @@
   "CHAT_UPDATE_ACTION_DESCRIPTION": "Number of times item chat updated",
   "CHAT_DELETE_ACTION_DESCRIPTION": "Number of times item chat deleted",
   "CHAT_CREATE_ACTION_DESCRIPTION": "Number of times item chat created",
+  "MEMBER_LOGIN_ACTION_DESCRIPTION": "Number of times logged in",
   "ERROR_FETCHING_DATA": "An error occurred while fetching data, Please try again later",
   "ITEM_SEARCH_PLACEHOLDER": "Search by item name",
   "RECENT_ITEMS_TITLE": "Recent Items",
@@ -101,6 +103,21 @@
   "EXPORT_LIST_ITEM_ACTIONS_TITLE": "Tracked Actions",
   "EXPORT_LIST_ITEM_ACTIONS_DESCRIPTION": "Actions or activities that have been recorded for this item within different view including Builder, Library, and Player.",
   "WHAT_TO_EXPORT_TITLE": "What actions does the archive include?",
+  "Today": "Today",
+  "Yesterday": "Yesterday",
+  "This Week": "This Week",
+  "Last Week": "Last Week",
+  "This Month": "This Month",
+  "Last Month": "Last Month",
+  "RANGE_DATE_PICKER_INPUT_LABEL": "Time period",
+  "GENERAL_STATISTICS_ACTIVITY_CHART": "Activity chart",
+  "MY_ANALYTICS": "My analytics",
+  "GENERAL_STATISTIC_ITEMS_CREATED": "Items created",
+  "GENERAL_STATISTIC_LIKED_ITEMS": "Liked items",
+  "GENERAL_STATISTIC_DOWNLOADED_ITEMS": "Downloaded items",
+  "GENERAL_STATISTIC_CHAT_CREATED": "Chat created",
+  "NO_RESULTS_FOUND": "No activity for the time period of {{period}}",
+  "HOME_MENU_ITEM": "Home",
   "SELECT_FORMAT_TITLE": "Select Archive file formats",
   "SELECT_FORMAT_DIALOG_DESCRIPTION": "Data you are about to export are available in two formats:",
   "JSON_DESCRIPTION": "key-value pairs, more a technical format.",
