fix: solidify package versions and update language pack to not include graasp

--- a/src/langs/de.json
+++ b/src/langs/de.json
@@ -40,10 +40,10 @@
   "USERS_ANALYTICS_TITLE": "Benutzer",
   "USERS_SELECT": "Benutzer",
   "USERS_TODAY": "Benutzer heute",
-  "VIEW_BUILDER_TOOLTIP": "Die „Builder“-Ansicht zeigt Analysen aus der standardmäßigen Graasp-Elementerstellungsoberfläche an.",
-  "VIEW_LIBRARY_TOOLTIP": "Die „Bibliothek“-Ansicht zeigt Analysen der eigenständigen Graasp-Schnittstelle an, die typischerweise von Visualisierungsressourcen verwendet wird.",
-  "VIEW_PLAYER_TOOLTIP": "Die „Spieler“-Ansicht zeigt Analysen der eigenständigen Graasp-Schnittstelle an, die normalerweise von Schülern für den Zugriff auf ein Element verwendet wird.",
-  "VIEW_UNKNOWN_TOOLTIP": "Die „unbekannte“ Ansicht gruppiert alle anderen Aktionen, die außerhalb der Graasp-Schnittstellen stattfinden könnten.",
+  "VIEW_BUILDER_TOOLTIP": "Die „Builder“-Ansicht zeigt Analysen aus der standardmäßigen LNCO.ai-Elementerstellungsoberfläche an.",
+  "VIEW_LIBRARY_TOOLTIP": "Die „Bibliothek“-Ansicht zeigt Analysen der eigenständigen LNCO.ai-Schnittstelle an, die typischerweise von Visualisierungsressourcen verwendet wird.",
+  "VIEW_PLAYER_TOOLTIP": "Die „Spieler“-Ansicht zeigt Analysen der eigenständigen LNCO.ai-Schnittstelle an, die normalerweise von Schülern für den Zugriff auf ein Element verwendet wird.",
+  "VIEW_UNKNOWN_TOOLTIP": "Die „unbekannte“ Ansicht gruppiert alle anderen Aktionen, die außerhalb der LNCO.ai-Schnittstellen stattfinden könnten.",
   "VIEWS_SELECT": "Sicht",
   "EXPORT_ERROR_MESSAGE": "Ein unerwarteter Fehler ist aufgetreten",
   "Sunday": "Sonntag",
