--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -40,10 +40,10 @@
   "USERS_ANALYTICS_TITLE": "Users",
   "USERS_SELECT": "Users",
   "USERS_TODAY": "Users today",
-  "VIEW_BUILDER_TOOLTIP": "The 'builder' view displays analytics from the default Graasp item creation interface.",
-  "VIEW_LIBRARY_TOOLTIP": "The 'library' view displays analytics from the standalone Graasp interface typically used by visualize resources.",
-  "VIEW_PLAYER_TOOLTIP": "The 'player' view displays analytics from the standalone Graasp interface typically used by students to access an item.",
-  "VIEW_UNKNOWN_TOOLTIP": "The 'unknown' view groups all the other actions that might happen outside of the Graasp interfaces.",
+  "VIEW_BUILDER_TOOLTIP": "The 'builder' view displays analytics from the default LNCO.ai item creation interface.",
+  "VIEW_LIBRARY_TOOLTIP": "The 'library' view displays analytics from the standalone LNCO.ai interface typically used by visualize resources.",
+  "VIEW_PLAYER_TOOLTIP": "The 'player' view displays analytics from the standalone LNCO.ai interface typically used by students to access an item.",
+  "VIEW_UNKNOWN_TOOLTIP": "The 'unknown' view groups all the other actions that might happen outside of the LNCO.ai interfaces.",
   "VIEWS_SELECT": "View",
   "EXPORT_ERROR_MESSAGE": "An unexpected error occurred",
   "Sunday": "Sunday",
