--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -40,10 +40,10 @@
   "USERS_ANALYTICS_TITLE": "Usuarios",
   "USERS_SELECT": "Usuarios",
   "USERS_TODAY": "Usuarios hoy",
-  "VIEW_BUILDER_TOOLTIP": "La vista 'constructor' muestra análisis de la interfaz predeterminada de creación de elementos de Graasp.",
-  "VIEW_LIBRARY_TOOLTIP": "La vista 'biblioteca' muestra análisis de la interfaz independiente Graasp que normalmente utilizan los recursos de visualización.",
-  "VIEW_PLAYER_TOOLTIP": "La vista del 'reproductor' muestra análisis de la interfaz independiente Graasp que los estudiantes suelen utilizar para acceder a un elemento.",
-  "VIEW_UNKNOWN_TOOLTIP": "La vista 'desconocida' agrupa todas las demás acciones que pueden ocurrir fuera de las interfaces de Graasp.",
+  "VIEW_BUILDER_TOOLTIP": "La vista 'constructor' muestra análisis de la interfaz predeterminada de creación de elementos de LNCO.ai.",
+  "VIEW_LIBRARY_TOOLTIP": "La vista 'biblioteca' muestra análisis de la interfaz independiente LNCO.ai que normalmente utilizan los recursos de visualización.",
+  "VIEW_PLAYER_TOOLTIP": "La vista del 'reproductor' muestra análisis de la interfaz independiente LNCO.ai que los estudiantes suelen utilizar para acceder a un elemento.",
+  "VIEW_UNKNOWN_TOOLTIP": "La vista 'desconocida' agrupa todas las demás acciones que pueden ocurrir fuera de las interfaces de LNCO.ai.",
   "VIEWS_SELECT": "Vista",
   "EXPORT_ERROR_MESSAGE": "A ocurrido un error inesperado",
   "Sunday": "Domingo",
