--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -40,10 +40,10 @@
   "USERS_ANALYTICS_TITLE": "Utilisateurs",
   "USERS_SELECT": "Utilisateurs",
   "USERS_TODAY": "Utilisateurs aujourd'hui",
-  "VIEW_BUILDER_TOOLTIP": "Le contexte 'builder' affiche les analytics de l'interface de création des éléments de Graasp.",
-  "VIEW_LIBRARY_TOOLTIP": "Le contexte 'bibliothèque' affiche les analytics de l'interface Graasp typiquement utilisée pour visualiser les ressources ouvertes.",
-  "VIEW_PLAYER_TOOLTIP": "Le contexte 'player' affiche les analytics de l'interface de Graasp typiquement utilisée par les étudiants pour accéder à un élément.",
-  "VIEW_UNKNOWN_TOOLTIP": "Le contexte 'inconnu' regroupe toutes les autres actions qui peuvent arriver en dehors de Graasp.",
+  "VIEW_BUILDER_TOOLTIP": "Le contexte 'builder' affiche les analytics de l'interface de création des éléments de LNCO.ai.",
+  "VIEW_LIBRARY_TOOLTIP": "Le contexte 'bibliothèque' affiche les analytics de l'interface LNCO.ai typiquement utilisée pour visualiser les ressources ouvertes.",
+  "VIEW_PLAYER_TOOLTIP": "Le contexte 'player' affiche les analytics de l'interface de LNCO.ai typiquement utilisée par les étudiants pour accéder à un élément.",
+  "VIEW_UNKNOWN_TOOLTIP": "Le contexte 'inconnu' regroupe toutes les autres actions qui peuvent arriver en dehors de LNCO.ai.",
   "VIEWS_SELECT": "Contexte",
   "EXPORT_ERROR_MESSAGE": "Une erreur inattendue est survenue",
   "Sunday": "Dimanche",
