--- a/src/langs/it.json
+++ b/src/langs/it.json
@@ -40,10 +40,10 @@
   "USERS_ANALYTICS_TITLE": "Utenti",
   "USERS_SELECT": "Utenti",
   "USERS_TODAY": "Utenti oggi",
-  "VIEW_BUILDER_TOOLTIP": "La vista 'builder' mostra le analisi dall'interfaccia di creazione degli elementi Graasp predefinita.",
-  "VIEW_LIBRARY_TOOLTIP": "La vista 'library' mostra le analisi dall'interfaccia Graasp autonoma tipicamente utilizzata dalle risorse di visualizzazione.",
-  "VIEW_PLAYER_TOOLTIP": "La vista 'player' mostra le analisi dall'interfaccia Graasp autonoma generalmente utilizzata dagli studenti per accedere a un elemento.",
-  "VIEW_UNKNOWN_TOOLTIP": "La vista 'indefinita' raggruppa tutte le altre azioni che potrebbero verificarsi al di fuori delle interfacce Graasp.",
+  "VIEW_BUILDER_TOOLTIP": "La vista 'builder' mostra le analisi dall'interfaccia di creazione degli elementi LNCO.ai predefinita.",
+  "VIEW_LIBRARY_TOOLTIP": "La vista 'library' mostra le analisi dall'interfaccia LNCO.ai autonoma tipicamente utilizzata dalle risorse di visualizzazione.",
+  "VIEW_PLAYER_TOOLTIP": "La vista 'player' mostra le analisi dall'interfaccia LNCO.ai autonoma generalmente utilizzata dagli studenti per accedere a un elemento.",
+  "VIEW_UNKNOWN_TOOLTIP": "La vista 'indefinita' raggruppa tutte le altre azioni che potrebbero verificarsi al di fuori delle interfacce LNCO.ai.",
   "VIEWS_SELECT": "Visualizzazione",
   "EXPORT_ERROR_MESSAGE": "Si è verificato un errore inatteso",
   "Sunday": "Domenica",
