fix: resolve various PR comments on Graasp mention and Library mention

--- a/src/langs/ar.json
+++ b/src/langs/ar.json
@@ -40,10 +40,10 @@
   "USERS_ANALYTICS_TITLE": "المستخدمين",
   "USERS_SELECT": "المستخدمين",
   "USERS_TODAY": "المستخدمين اليوم",
-  "VIEW_BUILDER_TOOLTIP": "يتم عرض تحليلات \"المنشئ\" من واجهة إنشاء العنصر Graasp الافتراضية.",
-  "VIEW_LIBRARY_TOOLTIP": "يتم عرض تحليلات \"المكتبة\"  من واجهة Graasp المستقلة التي تستخدم عادةً بواسطة الموارد المرئية.",
-  "VIEW_PLAYER_TOOLTIP": "يتم عرض تحليلات \"المشغل\" من واجهة Graasp المستقلة التي يستخدمها الطلاب عادةً للوصول إلى أحد العناصر.",
-  "VIEW_UNKNOWN_TOOLTIP": "ال \"غير المعروف\" تمثل كافة الإجراءات الأخرى التي قد تحدث خارج واجهات Graasp.",
+  "VIEW_BUILDER_TOOLTIP": "يتم عرض تحليلات \"المنشئ\" من واجهة إنشاء العنصر LNCO.ai الافتراضية.",
+  "VIEW_LIBRARY_TOOLTIP": "يتم عرض تحليلات \"المكتبة\"  من واجهة LNCO.ai المستقلة التي تستخدم عادةً بواسطة الموارد المرئية.",
+  "VIEW_PLAYER_TOOLTIP": "يتم عرض تحليلات \"المشغل\" من واجهة LNCO.ai المستقلة التي يستخدمها الطلاب عادةً للوصول إلى أحد العناصر.",
+  "VIEW_UNKNOWN_TOOLTIP": "ال \"غير المعروف\" تمثل كافة الإجراءات الأخرى التي قد تحدث خارج واجهات LNCO.ai.",
   "VIEWS_SELECT": "واجهة",
   "EXPORT_ERROR_MESSAGE": "حدث خطأ غير متوقع",
   "Sunday": "الأحد",
